# MessengerAppProjectGui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yaml  ci.yml
gui/: CMakeLists.txt  ClientGui.cpp  ClientGui.hpp  Event.hpp  ServerGui.cpp  ServerGui.hpp  mainClientGui.cpp  mainServerGui.cpp
libmessenger/: CMakeLists.txt
libmessenger/include/: ClientCore.hpp  Core.hpp  ServerCore.hpp
libmessenger/src/: ClientCore.cpp  Core.cpp  ServerCore.cpp
libmessenger/src/Common/: Logger.cpp  Logger.hpp
libmessenger/src/Common/Config/: pathConfig.hpp
libmessenger/src/Connection/Client/: Client.cpp  Client.hpp
libmessenger/src/Connection/Helpers/: Message.cpp  Message.hpp  MessageDecoder.cpp  MessageDecoder.hpp  MessageHandler.cpp  MessageHandler.hpp
libmessenger/src/Connection/Server/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
libmessenger/src/Database/: AdminDatabaseController.cpp  AdminDatabaseController.hpp  UserDatabaseController.cpp  UserDatabaseController.hpp
libmessenger/src/Database/RegisteredUserData/: data1.txt  data2.txt
libmessenger/src/Encryption/: EncryptionManager.cpp  EncryptionManager.hpp
libmessenger/src/Helpers/: LoginHubHelper.cpp  LoginHubHelper.hpp
libmessenger/src/Login/: AdminLoginHub.cpp  AdminLoginHub.hpp  AdminLoginHubCreator.cpp  AdminLoginHubCreator.hpp  LoginData.hpp  UserLoginHub.cpp  UserLoginHub.hpp  UserLoginHubCreator.cpp  UserLoginHubCreator.hpp
libmessenger/src/Registration/: AdminRegistrationHandler.cpp  AdminRegistrationHandler.hpp  UserRegistrationHandler.cpp  UserRegistrationHandler.hpp
libmessenger/tests/: AdminDatabaseControllerTests.cpp  AdminLoginHubTests.cpp  AdminRegistrationHandlerTests.cpp  CMakeLists.txt  EncryptionManagerTests.cpp  MessageDecoderTests.cpp  MessageHandlerTests.cpp  MessageTests.cpp  UserDatabaseControllerTests.cpp  UserLoginHubTests.cpp  UserRegistrationHandlerTests.cpp
libmessenger/tests/common/: commonFixture.cpp  commonFixture.hpp
libmessenger/tests/mocks/: DatabaseControllerMock.hpp  EncryptionManagerMock.hpp  RegistrationHandlerMock.hpp
libmessenger/tests/testDatabases/databaseControllerDB1/: data1.txt
messengerInterfaces/: CMakeLists.txt  IDatabaseController.hpp  IEncryptionManager.hpp  ILoginHub.hpp  ILoginHubFactory.hpp  IRegistrationHandler.hpp
